--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,6 @@
 
 body {
     margin: 0;
-    font-family: 'Karla';
+    font-family: 'Karla', sans-serif;
     font-weight: 700;
 }
